samples/_failures_safe/1761371896_6e6f2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f7e6736.c: In function ‘main’:
./samples/SAFE/__tmp_3f7e6736.c:165:17: error: expected expression at end of input
  165 |                 state_error(&
      |                 ^~~~~~~~~~~
./samples/SAFE/__tmp_3f7e6736.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3f7e6736.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3f7e6736.c:165:17: error: expected declaration or statement at end of input
